--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -1,106 +1,73 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 /* General container styles */
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 .about-page-container {
   width: 100%;
-  height: 100vh;
-  background-size: 180% 180%;
+  height: 100vh; 
   position: relative;
+  overflow: scroll;
 }
+
 
 .cards {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
   position: absolute;
 }
 
 /* Unique styles for each card */
-.cards .card-1 {
-  background-color: #f43f5e;
-  color: white;
+.cards .card-1,
+.cards .card-2,
+.cards .card-3 {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(255, 255, 255);
   border-radius: 10px;
-  height: 200px;
-  width: 200px;
   position: absolute;
-  top: 200px;
+  box-sizing: border-box; 
+  margin: 5px; 
+  border: 2px solid red; 
+}
+
+.cards .card-1 {
+  height: 500px;
+  width: 600px;
+  top: 150px;
   left: 100px;
 }
 
 .cards .card-2 {
-  background-color: #f8f8f8;
-  color: black;
-  border: 2px solid #333;
-  position: absolute;
-  border-radius: 10px;
-  height: 420px;
-  width: 320px;
-  top: 230px;
-  left: 305px;
+  height: 500px;
+  width: 600px;
+  top: 700px;
+  left: 800px;
 }
 
 .cards .card-3 {
-  background-color: #3b22c5;
-  color: white;
-  border-radius: 10px;
-  position: absolute;
-  height: 180px;
-  width: 280px;
-  top: 405px;
-  left: 20px;
-}
-
-.cards .card-4 {
-  background-color: #34d399;
-  color: black;
-  border-radius: 10px;
-  position: absolute;
-  height: 280px;
-  width: 350px;
-  top:400px;
-  left:630px;
-}
-
-.cards .card-5 {
-  background-color: #eab308;
-  color: white;
-  border-radius: 10px;
-  position: absolute;
-  height: 300px;
-  width: 300px;
-  top:95px;
-  left: 630px;
-}
-
-.cards .card-6 {
-  background-color: #db2777;
-  color: white;
-  border-radius: 10px;
-  position: absolute;
-  height: 550px;
-  width: 250px;
-  top:150px;
-  left:1260px;
-}
-
-.cards .card-7 {
-  background-color: #2563eb;
-  color: white;
-  position: absolute;
-  border-radius: 10px;
-  height: 200px;
-  width: 320px;
-  top:195px;
-  left:935px;
-}
-
-.cards .card-8 {
-  background-color: #f43f5e;
-  color: white;
-  border-radius: 10px;
-  position: absolute;
-  height: 180px;
-  width: 270px;
-  top:400px;
-  left:985px;
+  height: 500px;
+  width: 600px;
+  top: 1250px;
+  left: 100px;
 }
 
 .cards .card {
@@ -114,19 +81,42 @@
 }
 
 .cards .card:hover {
-  transform: scale(1.1,1.1);
+  transform: scale(1.1, 1.1);
 }
 
 .cards:hover > .card:not(:hover) {
   filter: blur(5px);
-  transform: scale(0.9,0.9);
+  transform: scale(0.9, 0.9);
 }
 
 .cards .card p.tip {
-  font-size: 1em;
+  position: absolute;
+  margin-bottom: 450px;
+  font-size: 3.3em;
   font-weight: 700;
 }
 
 .cards .card p.second-text {
-  font-size: 0.7em;
+  font-size: 1.4rem;
+  position: absolute;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 20px;
+}
+.card-link {
+  position: absolute;
+  border: 1px solid red;
+  border-radius: 5px;
+  color: #ff0000; 
+  text-decoration: none; 
+  font-size: 15px;
+  margin-top: 400px; 
+  display: inline-block; 
+  padding: 15px 20px; 
+  transition: color 300ms ease, transform 300ms ease; 
+}
+
+.card-link:hover {
+  color: #ffffff; 
+  transform: scale(1.05); 
 }
