--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,6 +1,9 @@
 /* Homepage Styles */
 .homepage {
   font-family: Arial, sans-serif;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   background-color: rgb(0, 0, 0);
@@ -98,3 +101,6 @@
   font-size: 1rem;
   transition: color 0.3s ease;
 }
+
+
+
